feign and ribbon added

--- a/currency-convertion-service/pom.xml
+++ b/currency-convertion-service/pom.xml
@@ -33,7 +33,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-
+		<dependency>
+			 <groupId>org.springframework.cloud</groupId>
+   			 <artifactId>spring-cloud-starter-feign</artifactId>
+   			 <version>1.4.7.RELEASE</version>
+		</dependency>
+		<dependency>
+			 <groupId>org.springframework.cloud</groupId>
+   			 <artifactId>spring-cloud-starter-ribbon</artifactId>
+   			 <version>1.2.2.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
