--- a/currency-convertion-service/pom.xml
+++ b/currency-convertion-service/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>1.4.7.RELEASE</version>
+		</dependency>
+		<dependency>
 			 <groupId>org.springframework.cloud</groupId>
    			 <artifactId>spring-cloud-starter-feign</artifactId>
    			 <version>1.4.7.RELEASE</version>
