--- a/limit-service/src/main/resources/application.properties
+++ b/limit-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=limits-service
 server.port=8080
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.profile=qa
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
