--- a/limit-service/Dockerfile
+++ b/limit-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 EXPOSE 8080
-ADD target/*.jar app.jar
-ENTRYPOINT [ "sh", "-c", "java -jar /app.jar" ]
+ADD target/*.war app.war
+ENTRYPOINT [ "sh", "-c", "java -jar /app.war" ]
